frontend/src/styles/index.scss
/* ... */
.tag-edit-form {
	.option-block {
		display: flex;
		flex-direction: column;
		align-items: start;
		margin-top: 8px;

		& > label {
			color: $fg-500;
			font-size: 0.8rem;
		}
	}
}

input[type="color"] {
	height: 1em;
	width: 2em;
}

.reactions-modal {
	display: flex;
	margin: -16px;
	border: solid $sep-500 1px;
	height: 300px;
	width: 400px;

	.reactions {
		background: $bg-100;
		padding: 8px;
		display: flex;
		flex-direction: column;

		button {
			display: flex;
			gap: 8px;
			width: 48px;

			border: none;
			background: none;

			&:hover,
			&[data-selected] {
				background: #fff2;
			}
		}
	}

	.users {
		display: flex;
		flex-direction: column;
		background: $bg-200;
		gap: 8px;
		padding: 8px;
	}

	.user {
		display: flex;
		align-items: center;
		gap: 8px;

		.avatar {
			height: 24px;
			width: 24px;
		}
	}
}

.admin-tasks {
	border: solid $sep-300 1px;
	background: $bg-150;

	& > li {
		display: flex;
		align-items: center;
		padding: 4px;

		& > .name {
			flex: 1;
		}
	}
}

.add-reaction {
	border: none;
	background: none;
	display: flex;
	align-items: center;
	justify-content: center;
}

.filters {
	display: flex;
	border: solid $sep-500 1px;
	border-radius: 4px;
	overflow: hidden;

	& > button {
		border: none;

		&.active {
			background: #fff2;
		}
	}
}

.thread-group {
	border: solid 1px $sep-400;
	border-radius: 4px;
	margin: 8px 0;
	overflow: hidden;
	max-width: 800px;

	& .thread-card {
		padding: 2px 0;
		margin: 0;
		border: none;
		border-radius: 0;
	}

	& li:not(:first-child) {
		border-top: solid 1px $sep-400;
	}
}

.document {
	grid-area: main;
	background-color: $bg-200;
	display: flex;
	flex-direction: column;

	& > header {
		margin: 4px;
	}

	& > main {
		flex: 1;
	}

	& .fake-dropdowns {
		display: inline-block;
		border: solid $sep-500 1px;
		border-radius: 4px;
		overflow: hidden;

		& button {
			border: none;

			&.selected {
				background: $bg-150;
			}

			&:hover {
				background: $bg-200;
			}

			&.selected:hover {
				background: $bg-100;
			}
		}
	}

	.document-presence-cursor {
		position: absolute;
		display: inline-block;
		height: 1.2em;
		vertical-align: text-bottom;
		user-select: none;
	}

	.document-presence-name {
		color: black;
		font-size: 12px;
		padding: 2px 6px;
		border-radius: 4px;
		white-space: nowrap;
		position: absolute;
		pointer-events: none;
		z-index: 9999;
		width: max-content;
	}
}

.merge-menu,
.branch-menu {
	display: flex;
	flex-direction: column;
	background-color: $bg-150;
	border: solid $sep-300 1px;
	border-radius: 4px;
	padding: 4px 0;
	box-shadow: 0 2px 8px $bg-100;

	& > ul,
	& > ul {
		display: flex;
		flex-direction: column;
	}

	& > ul > li,
	& > ul > li {
		cursor: pointer;
		display: flex;
		flex-direction: column;

		&.separator {
			border-bottom: solid $sep-300 1px;
			margin: 4px 0;
		}

		& > button {
			display: flex;
			background: none;
			border: none;
			gap: 4px;
			margin: 0 4px;
			border-radius: 4px;

			& > .icon {
				/* HACK: visually center temp icons */
				margin-top: 2px;
			}

			& > .info {
				display: flex;
				flex-direction: column;
			}
		}

		&:hover > button {
			background: #fff1;
		}
	}
}

